force-app/main/default/objects/Saved_Metadata_Entry__c/Saved_Metadata_Entry__c.object-meta.xml
<CustomObject>
    <label>Saved Metadata Entry</label>
    <nameField>
        <displayFormat>SME-{0000}</displayFormat>
        <label>Saved Metadata Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saved Metadata Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>