force-app/main/default/objects/Saved_Metadata_Entry__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SObject</fullName>
            </value>
            <value>
                <fullName>Non-picklist Field</fullName>
            </value>
            <value>
                <fullName>Picklist Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>