force-app/main/default/objects/Saved_Metadata_Entry__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <description>Picklist values, comma separated like: one,two,three</description>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>