force-app/main/default/objects/Saved_Metadata_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SObject_Name__c</columns>
    <columns>Entity_Name__c</columns>
    <columns>Entity_Type__c</columns>
    <columns>Picklist_Values__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>